# LAA-maps-editor

./: .gitignore  .travis.yml  AboutDialog.qml  CMakeLists.txt  CircleParamDialog.qml  CloneDialog.qml  CupTextData.qml  GFWDialog.qml  LineParamDialog.qml  MainWindow.qml  Makefile  NativeText.qml  NativeTextInput.qml  PinchMap.qml  PinchMapControls.qml  PointsList.qml  PointsListEditableDelegate.qml  PolygonList.qml  PolygonListDelegate.qml  PropertiesDetail.qml  README.md  Ruler.qml  ShadowElement.qml  TextDialog.qml  TextFieldNumber.qml  TrackStatistics.qml  TracksList.qml  TracksListPolygonsDelegate.qml  TracksListTableDelegate.qml  Waypoint.qml  WorldFileImage.qml  editor.desktop  editor.pro  editor.qrc  editor.rc  editor.spec  editor_defaults.json  editor_qmlcache.qrc  filereader.cpp  filereader.h  (+7 more)
.ci/: qt_installer_windows.qs
.github/workflows/: clang-format-check.yml  main.yml
cmake/: DeployQt.cmake
i18n/: editor_cs_CZ.ts  editor_en_US.ts
qml/editor/: AboutDialog.qml  CloneDialog.qml  CupTextData.qml  PinchMap.qml  PointsList.qml  PointsListEditableDelegate.qml  PolygonList.qml  PolygonListDelegate.qml  PropertiesDetail.qml  TrackStatistics.qml  TracksList.qml  TracksListPolygonsDelegate.qml  TracksListTableDelegate.qml  functions.js  main.qml
src/: customnetworkaccessmanager.cpp  customnetworkaccessmanager.h  filereader.cpp  filereader.h  gpxjsonconvertor.cpp  gpxjsonconvertor.h  igc.cpp  igc.h  imagesaver.cpp  imagesaver.h  kmljsonconvertor.cpp  kmljsonconvertor.h  main.cpp  networkaccessmanagerfactory.cpp  networkaccessmanagerfactory.h
src/qml/: AboutDialog.qml  CircleParamDialog.qml  CloneDialog.qml  ConfigFile.qml  CupTextData.qml  GFWDialog.qml  LineParamDialog.qml  MainWindow.qml  PinchMap.qml  PointsList.qml  PointsListEditableDelegate.qml  PolygonList.qml  PolygonListDelegate.qml  PropertiesDetail.qml  TrackStatistics.qml  TracksList.qml  TracksListPolygonsDelegate.qml  TracksListTableDelegate.qml  functions.js
src/qml/components/: Ruler.qml  ShadowElement.qml  TextDialog.qml  TextFieldNumber.qml  WorldFileImage.qml
